--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,3 +44,22 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+
+section#redes-sociais { /* Configura, na section com id="redes-sociais" */
+    text-align: right; /* Coloca os botões de redes sociais do lado direito */
+}
+
+section#redes-sociais img { /* Configura, na section com id="redes-sociais" as img  */
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.408);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover { /* Configura, na section com id="redes-sociais" as img, para quando passsar o mouse em cima dos botões  */
+    border: 2px solid rgba(255, 255, 255, 0.601);
+    transform: translate(-3px, -3px); /* Faz com que o botão se mova para o lado ao passar o mouse*/
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+    transition: transform 0.5s, border 0.8s; /* Faz com que tenha uma transição ao passar o mouse botão se mova para o lado ao passar o mouse*/
+}
